--- a/tasks/configure_windows.yml
+++ b/tasks/configure_windows.yml
@@ -20,6 +20,12 @@
   when:
     - not file_info.stat.exists
 
+- name: "Windows | Stop service"
+  win_service:
+    name: Telegraf
+    state: stopped
+  ignore_errors: yes
+    
 - name: "Windows | Unzip file"
   win_unzip:
     src: '{{ telegraf_win_install_dir }}\telegraf-{{ telegraf_agent_version }}_windows_amd64.zip'
