As per comment in issue the environment argument should be provided

--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -68,6 +68,9 @@
     url: https://dl.influxdata.com/telegraf/releases/{{ telegraf_agent_package_file_deb }}
     dest: "{{ telegraf_agent_package }}"
     use_proxy: "{{ true if http_proxy is defined and http_proxy else false }}"
+  environment:
+    http_proxy: "{{ http_proxy | default(None) | default(omit) }}"
+    https_proxy: "{{ https_proxy | default(None) | default(omit) }}"
   when:
     - telegraf_agent_package_method == "online"
 
